Fixed main container contents hidden under app header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+@use 'app-vars';
+
 main {
     min-height: 100vh;
+    padding-top: app-vars.$header-height;
 }
