--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,10 +1,12 @@
 @use '@carbon/layout';
+@use '../app-vars';
 
 .header {
     position: fixed;
     top: 0;
     z-index: 12;// TODO move to a seperate file with all elevation variations
     width: 100%;
+    height: app-vars.$header-height;
     padding: layout.$spacing-05;
     font-variant: all-small-caps;
     background-color: var(--white);
